# VulkanTest

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README  README.md  VulkanTest.sln  VulkanTest.txt  build.bat  build.zsh  cmake.zsh  run.bat  run.sh  run.zsh  vc140.idb
.cache/clangd/index/: App.cpp.3D26107B9378BD1C.idx  App.h.F09AD8381847F202.idx  DXC_Compiler.cpp.9D69FEEFB9E5130C.idx  DXC_Compiler.h.E4184CB0CD0333A3.idx  DebugMessenger.cpp.3AC8E7409EACB8DF.idx  DebugMessenger.h.878C8344988A2C81.idx  File.h.11F93F477710F6DF.idx  GLSL_Compiler.cpp.21A125310BB4878C.idx  GLSL_Compiler.h.8285C98760BF7142.idx  GraphicPipelineConfig.cpp.D353F4B19129B3A0.idx  GraphicPipelineConfig.h.EB94789144E77C4D.idx  Image.cpp.7CE94FD1F7156561.idx  Image.h.BD4F0E7DD5FFF9E5.idx  Instance.cpp.225BB9716AE83727.idx  Instance.h.C212E1248A4A1E11.idx  PhysicalDevice.cpp.DD489357A16E3502.idx  PhysicalDevice.h.29EF1988B1B4F806.idx  Renderer.cpp.DAEE1AD6B2274284.idx  Renderer.h.39CED4EA52F8AB5E.idx  ShaderCompiler.cpp.4C41ACB33EB55478.idx  ShaderCompiler.h.1977B7CE681917DD.idx  SwapChain.cpp.CAADCE377958FE86.idx  SwapChain.h.FEB1FAEA54C9FB8D.idx  VulkanTest.cpp.E6D2CB85FD90D86D.idx  Window.cpp.962176325EB68692.idx  Window.h.9375ACAEF2FE1E0C.idx
CMake/: Findglfw3.cmake
CMakeFind/: Findglfw3.cmake
Engine/: CMakeLists.txt  Engine.cpp  Engine.cppm  EngineMacro.h  File.cppm  Input.cpp  Input.cppm  Layer.cppm  LayerStack.cpp  LayerStack.cppm  Log.cppm  ShaderCompiler.cpp  ShaderCompiler.cppm  Timestep.cppm  VT_Engine.cppm  VT_Export  Window.cpp  Window.cppm
Engine/Event/: ApplicationEvent.cppm  CMakeLists.txt  Event.cppm  EventBase.cppm  KeyEvent.cppm  MouseEvent.cppm
Engine/Layer/: CMakeLists.txt  ImGuiLayer.cpp  ImGuiLayer.cppm  Layer.cppm  LayerStack.cpp  LayerStack.cppm
Engine/Lib/: CMakeLists.txt
Engine/Platform/: CMakeLists.txt  Platform.cppm
Engine/Platform/GLFW/: Input.cpp  Input.cppm
Engine/Platform/Vulkan/: Attachment.cppm  Attachments.cppm  Buffer.cpp  Buffer.cppm  CMakeLists.txt  Context.cpp  Context.cppm  DescriptorSet.cpp  DescriptorSet.cppm  Device.cppm  Pipeline.cpp  Pipeline.cppm  RendererContext.cpp  RendererContext.cppm  Shader.cpp  Shader.cppm  Swapchain.cpp  Swapchain.cppm  Synchronization.cppm  Util.cppm  Vulkan.h  VulkanBuffer.cpp  VulkanBuffer.cppm  VulkanImage.cpp  VulkanImage.cppm  VulkanTexture.cpp  VulkanTexture.cppm
Engine/Platform/Vulkan/Device/: Allocator.cppm  CMakeLists.txt  DebugMessenger.cppm  Device.cpp  Device.cppm  Instance.cpp  Instance.cppm  PhysicalDevice.cpp  PhysicalDevice.cppm  Swapchain.cpp  Swapchain.cppm
Engine/Platform/Vulkan/Native/: Allocator.cppm  CMakeLists.txt  Instance.cpp  Instance.cppm  PhysicalDevice.cpp  PhysicalDevice.cppm  RenderPass.cpp  RenderPass.cppm  Swapchain.cpp  Swapchain.cppm
Engine/Platform/Vulkan/Renderer/: BasicRenderModule.cpp  Buffer.cpp  ImageGroup.cpp  Renderer.cpp  Window.cpp
Engine/Platform/Vulkan/Renderer/include/: BasicRenderModule.h  Renderer.h  SwapChain.h
Engine/Platform/Vulkan/Util/: DXC_Compiler.cpp  DXC_Compiler.h  File.h  GLSL_Compiler.cpp  ShaderCompiler.h
Engine/Platform/Windows/: CMakeLists.txt  PlatformWindows.cppm  Window.cpp  Window.cppm
Engine/Renderer/: Buffer.cppm  CMakeLists.txt  Camera.cppm  CameraController.cpp  CameraController.cppm  GraphicsContext.cppm  OrthographicCamera.cpp  OrthographicCamera.cppm  ProjectionCamera.cpp  ProjectionCamera.cppm  RenderCmdAPI.cppm  Renderer.cpp  Renderer.cppm  RendererAPI.cppm  RendererContext.cpp  RendererContext.cppm  RendererOption.cppm  RendererType.cppm
Engine/Renderer/Resource/: CMakeLists.txt  Texture.cppm
Engine/Util/: CMakeLists.txt  Util.cppm
Engine/Util/DataStructure/: CMakeLists.txt  DataStructure.cppm  PointerWrapper.cppm
Resources/: Compile.bat  Shader.frag  Shader.vert  frag.spv  vert.spv
Shader/: Fragment.hlsl  Vertex.hlsl
Src/: App.cpp  App.cppm  App.h  CMakeLists.txt  DebugMessenger.h  GLSL_Compiler.cpp  GraphicPipeline.cpp  GraphicPipeline.h  ImageLayer.cppm  Instance.cpp  Instance.h  PhysicalDevice.cpp  PhysicalDevice.h  Pipeline.cpp  Pipeline.h  Renderer.cpp  Renderer.h  ShaderCompiler.cpp  ShaderCompiler.h  SwapChain.cpp  SwapChain.h  VulkanTest.cpp  Window.cpp  Window.h  main.cpp
Src/Device/: CMakeLists.txt  DebugMessenger.cpp  Device.cpp  Instance.cpp  PhysicalDevice.cpp
Src/Device/Include/: DebugMessenger.h  Device.h  Instance.h  PhysicalDevice.h
Src/Include/: App.h
Src/Renderer/: CMakeLists.txt  GraphicPipeline.cpp  GraphicPipelineConfig.cpp  Renderer.cpp  SwapChain.cpp  Window.cpp
Src/Renderer/Include/: GraphicPipeline.h  GraphicPipelineConfig.h  Image.h  Renderer.h  SwapChain.h  Window.h
Src/Shader/: CMakeLists.txt  Compile.bat  Vertex.hlsl
Src/Util/: CMakeLists.txt  DXC_Compiler.cpp  GLSL_Compiler.cpp  ShaderCompiler.cpp
Src/Util/Include/: DXC_Compiler.h  File.h  GLSL_Compiler.h  ShaderCompiler.h
VulkanEngine/: CMakeLists.txt
VulkanEngine/Device/: CMakeLists.txt  Device.cpp  Instance.cpp  PhysicalDevice.cpp
VulkanEngine/Device/include/: DebugMessenger.h  Device.h  Instance.h  PhysicalDevice.h
VulkanEngine/Renderer/: CMakeLists.txt  Image.cpp  ImageGroup.cpp  Renderer.cpp  SwapChain.cpp
VulkanEngine/Renderer/include/: Buffer.h  Image.h  ImageGroup.h  Renderer.h  SwapChain.h  Window.h
VulkanEngine/Util/: CMakeLists.txt  ShaderCompiler.cpp
VulkanEngine/Util/include/: DependencyGraph.h  GLSL_Compiler.h  ShaderCompiler.h
VulkanTest/: VulkanTest.vcxproj  VulkanTest.vcxproj.filters
src/: Compiler.cpp  Compiler.h  DXC_Compiler.cpp  DXC_Compiler.h  File.h  GLSL_Compiler.h  Image.cpp  Images.h  main.cpp
